Misc/traefikmiddleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-color-prefixes
  namespace: default # Asegúrate de que sea el mismo namespace de tu Ingress
spec:
  stripPrefix:
    prefixes:
      - /red
      - /blue
      - /green
