Misc/nginx-deploautoscaler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    env: "app"
    owner: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 4

  revisionHistoryLimit: 5
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.0
        ports:
        - containerPort: 80
