Misc/nginx-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-stateful
  labels:
    env: "app"
    owner: nginxss
spec:
  selector:
    matchLabels:
      app: nginxss
  replicas: 4
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nginxss
    spec:
      containers:
      - name: nginxss
        image: nginx:1.25.0
        ports:
        - containerPort: 80
