Misc/nginx-updatedeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    env: "app"
    owner: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 4
  revisionHistoryLimit: 5
  minReadySeconds: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.1
        ports:
        - containerPort: 80
