Misc/green.yaml
kind: Pod
apiVersion: v1
metadata:
  name: green-app
  labels:
    app: green
spec:
  containers:
    - name: green-app
      image: hashicorp/http-echo
      args:
        - "-text=green"

---

kind: Service
apiVersion: v1
metadata:
  name: green-service
spec:
  selector:
    app: green
  ports:
    - port: 5678 #Default port de la imagen
