Misc/color-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
  annotations:
#    traefik.ingress.kubernetes.io/router.middlewares: default-strip-color
spec:
  rules:
  - http:
      paths:
        - path: /red
          pathType: Prefix
          backend:
            service:
              name: red-service
              port:
                number: 5678

        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: blue-service
              port:
                number: 5678

        - path: /green
          pathType: Prefix
          backend:
            service:
              name: green-service
              port:
                number: 5678
